...
                  ),
          ),
        ],
      ),
      floatingActionButton: FloatingActionButton(
        onPressed: () => _newBook(context),
        tooltip: 'Ny bok',
        child: const Icon(Icons.add),
      ),
    );
  }
}

